about:gpu should report GpuCompositing real time status.

Right now it reports the GPU capability, i.e., if the feature is blacklisted.

Instead, now we track the status dynamically and about:gpu always reports the
actural status whether Chrome is running with GpuCompositing or software one.

BUG=827210
TEST=manual through about:gpu
R=danakj@chromium.org

Change-Id: I322c03de8750bbed2b5dcdc8569dd5dfb31dbe36
Reviewed-on: https://chromium-review.googlesource.com/986929
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547238}
Former-commit-id: df928557a1a267516e3995a1aa6978ced9deba6a